--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ body {
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
      width: 100vw;
+     height: 100%;
 }
 
 h1 {
@@ -61,6 +62,11 @@ h1 {
 .entry-form button:hover {
     background-color: #45a049;
 }
+#msg{
+    color: red;
+    font-size: small;
+ 
+}
 
 .filters {
     display: flex;
@@ -68,11 +74,14 @@ h1 {
     margin-bottom: 20px;
 }
 
-ul#entriesList {
-    list-style: none;
+ol#entriesList {
+    list-style:decimal;
+    gap: 20px;
+   
+
 }
 
-ul#entriesList li {
+ol#entriesList li {
     display: flex;
     justify-content: space-between;
     padding: 10px;
@@ -80,16 +89,50 @@ ul#entriesList li {
     border: 1px solid #ddd;
     border-radius: 4px;
     margin-bottom: 10px;
+    gap: 20px;
 }
 
-ul#entriesList li button {
+ol#entriesList li button {
     background-color: #e74c3c;
     color: white;
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    padding: 10px;
+}
+ol#entriesList li button#edit{
+    background-color: rgb(246, 246, 30);
+    color: black;
 }
 
-ul#entriesList li button:hover {
+ol#entriesList li button:hover {
     background-color: #c0392b;
+}
+@media (max-width:768px){
+    .container {
+        background-color: #fff;
+        padding: 10px;
+        border-radius: 8px;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+         width: 100vw;
+         height: 100%;
+         font-size: small;
+    }
+    .filters {
+        display: flex;
+        justify-content: space-around;
+        margin-bottom: 20px;
+
+}
+.entry-form {
+    display: grid;
+    gap: 10px;
+    margin-bottom: 20px;
+}
+.overview {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+    font-size: smaller;
+}
 }
